--- a/index.html
+++ b/index.html
@@ -244,40 +244,40 @@
                     <tr>
                         <td class="name-cell"><span class="dot" aria-hidden></span>Cetaphil</td>
                         <td>15-09-2025</td>
-                        <td><a href="https://github.com/yourusername/repo" class="btn-link btn-github" target="_blank">Code</a></td>
-                        <td><a href="https://your-project.netlify.app" class="btn-link btn-netlify" target="_blank">Live</a></td>
+                        <td><a href="https://github.com/himmatmundhe07/Website-Clones/tree/master/Cetaphil" class="btn-link btn-github" target="_blank">Code</a></td>
+                        <td><a href="https://cetaphilbydemu.netlify.app/" class="btn-link btn-netlify" target="_blank">Live</a></td>
                     </tr>
 
                     <tr>
                         <td class="name-cell"><span class="dot" aria-hidden></span>Play Station</td>
                         <td>15-09-2025</td>
-                        <td><a href="#" class="btn-link btn-github">Code</a></td>
-                        <td><a href="#" class="btn-link btn-netlify">Live</a></td>
+                        <td><a href="https://github.com/himmatmundhe07/Website-Clones/tree/master/PlaySation" class="btn-link btn-github">Code</a></td>
+                        <td><a href="playsation.netlify.app" class="btn-link btn-netlify">Live</a></td>
                     </tr>
 
                     <tr>
                         <td class="name-cell"><span class="dot"></span>True-Classic</td>
                         <td>15-09-2025</td>
-                        <td><a href="#" class="btn-link btn-github">Code</a></td>
-                        <td><a href="#" class="btn-link btn-netlify">Live</a></td>
+                        <td><a href="https://github.com/himmatmundhe07/Website-Clones/tree/master/True-Classic" class="btn-link btn-github">Code</a></td>
+                        <td><a href="tureclassicbydemu.netlify.app" class="btn-link btn-netlify">Live</a></td>
                     </tr>
                     <tr>
                         <td class="name-cell"><span class="dot"></span>Icalm</td>
                         <td>15-09-2025</td>
-                        <td><a href="#" class="btn-link btn-github">Code</a></td>
-                        <td><a href="#" class="btn-link btn-netlify">Live</a></td>
+                        <td><a href="https://github.com/himmatmundhe07/Website-Clones/tree/master/icalm" class="btn-link btn-github">Code</a></td>
+                        <td><a href="icalmbydemu.netlify.app" class="btn-link btn-netlify">Live</a></td>
                     </tr>
                     <tr>
                         <td class="name-cell"><span class="dot"></span>Bombay-Closet</td>
                         <td>15-09-2025</td>
-                        <td><a href="#" class="btn-link btn-github">Code</a></td>
-                        <td><a href="#" class="btn-link btn-netlify">Live</a></td>
+                        <td><a href="https://github.com/himmatmundhe07/Website-Clones/tree/master/Bombay-closet" class="btn-link btn-github">Code</a></td>
+                        <td><a href="bombay-closet-by-demu.netlify.app" class="btn-link btn-netlify">Live</a></td>
                     </tr>
                     <tr>
                         <td class="name-cell"><span class="dot"></span>OnCom</td>
                         <td>15-09-2025</td>
-                        <td><a href="#" class="btn-link btn-github">Code</a></td>
-                        <td><a href="#" class="btn-link btn-netlify">Live</a></td>
+                        <td><a href="https://github.com/himmatmundhe07/Website-Clones/tree/master/OnCom" class="btn-link btn-github">Code</a></td>
+                        <td><a href="oncom-by-demu.netlify.app" class="btn-link btn-netlify">Live</a></td>
                     </tr>
                     
                     </tbody>
