--- a/True-Classic/shop-bestSelling.html
+++ b/True-Classic/shop-bestSelling.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best High Quality, Soft, Slim Fitted T-Shirts for Men - True Classic</title>
     <link rel="stylesheet" href="shop-bestSelling.css">
+    <link rel="icon" type="image"
+    href="https://th.bing.com/th/id/ODF.CFXVDrpmfhvIpsowqac8zQ?w=32&h=32&qlt=90&pcl=fffffc&o=6&pid=1.2">
 </head>
 
 <body>
@@ -47,7 +49,7 @@
     <div class="grid-shirt-nav-bar">
         <form class="category-buttons">
             <label class="radio-box">
-                <input type="radio" name="category" value="short" >
+                <input type="radio" name="category" value="short">
                 <span>Short Sleeves</span>
             </label>
 
