--- a/True-Classic/top-rated.html
+++ b/True-Classic/top-rated.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best High Quality, Soft, Slim Fitted T-Shirts for Men - True Classic</title>
     <link rel="stylesheet" href="top-rated.css">
+    <link rel="icon" type="image"
+    href="https://th.bing.com/th/id/ODF.CFXVDrpmfhvIpsowqac8zQ?w=32&h=32&qlt=90&pcl=fffffc&o=6&pid=1.2">
 </head>
 
 <body>
@@ -164,7 +166,9 @@
                     </div>
                 </div>
                 <div class="product-description">
-                    <p>From beach days to burpees, these quick-dry shorts are built to keep up. With 4-way stretch, a sweat-wicking fabric, and a supportive built-in liner, you get performance-level comfort in a lightweight, go-anywhere package.</p>
+                    <p>From beach days to burpees, these quick-dry shorts are built to keep up. With 4-way stretch, a
+                        sweat-wicking fabric, and a supportive built-in liner, you get performance-level comfort in a
+                        lightweight, go-anywhere package.</p>
                     <button>Buy Now</button>
                 </div>
             </div>
@@ -202,7 +206,8 @@
                     </div>
                 </div>
                 <div class="product-description">
-                    <p>High-performance joggers built for movement and comfort. Breathable stretch, ultra-soft feel, and UPF 30 protection—ready for workouts or weekends.</p>
+                    <p>High-performance joggers built for movement and comfort. Breathable stretch, ultra-soft feel, and
+                        UPF 30 protection—ready for workouts or weekends.</p>
                     <button>Buy Now</button>
                 </div>
             </div>
@@ -240,7 +245,9 @@
                     </div>
                 </div>
                 <div class="product-description">
-                    <p>Inspired by the aviator jacket, this water-resistant bomber brings a perfect fit to an American classic. With a signature high-contrast orange lining and authentic brass zippers, it’s an easy way to add instant style to your look.</p>
+                    <p>Inspired by the aviator jacket, this water-resistant bomber brings a perfect fit to an American
+                        classic. With a signature high-contrast orange lining and authentic brass zippers, it’s an easy
+                        way to add instant style to your look.</p>
                     <button>Buy Now</button>
                 </div>
             </div>
