--- a/Bombay-closet/index.html
+++ b/Bombay-closet/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Stop Thrift Shop - Buy, Sell, Rent - Bombay Closet Cleanse</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image" href="https://bombayclosetcleanse.in/cdn/shop/files/Untitled_design_10.png?crop=center&height=32&v=1726226491&width=32">
 </head>
 
 <body>
@@ -178,11 +179,9 @@
             <div class="accessories">
                 <div class="accessories-image">
                     <img class="accessories-1"
-                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6608.jpg?v=1756886878&width=600"
-                        alt="">
+                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6608.jpg?v=1756886878&width=600" alt="">
                     <img class="accessories-2"
-                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6609.jpg?v=1756886878&width=360"
-                        alt="">
+                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6609.jpg?v=1756886878&width=360" alt="">
                 </div>
                 <div class="accessories-details">
                     <a href="">Red Stone Ring</a>
@@ -208,18 +207,16 @@
             <div class="accessories">
                 <div class="accessories-image">
                     <img class="accessories-1"
-                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6612.jpg?v=1756887087&width=600"
-                        alt="">
+                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6612.jpg?v=1756887087&width=600" alt="">
                     <img class="accessories-2"
-                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6612.jpg?v=1756887087&width=360"
-                        alt="">
+                        src="https://bombayclosetcleanse.in/cdn/shop/files/IMG-6612.jpg?v=1756887087&width=360" alt="">
                 </div>
                 <div class="accessories-details">
                     <a href="">Marble Pendant Necklace</a>
                     <span>Rs. 490.00</span>
                 </div>
             </div>
-            
+
         </div>
 
         <div class="header">
@@ -507,8 +504,8 @@
 
         <div class="footer-end">
             <span>© 2025, </span>
-            <span id="effect" >Bombay Closet Cleanse </span>
-            <span id="effect" >Powered by Shopify </span>
+            <span id="effect">Bombay Closet Cleanse </span>
+            <span id="effect">Powered by Shopify </span>
         </div>
 
     </footer>
