--- a/Bombay-closet/product-cart.html
+++ b/Bombay-closet/product-cart.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Stop Thrift Shop - Buy, Sell, Rent - Bombay Closet Cleanse</title>
     <link rel="stylesheet" href="product-cart.css">
+    <link rel="icon" type="image" href="https://bombayclosetcleanse.in/cdn/shop/files/Untitled_design_10.png?crop=center&height=32&v=1726226491&width=32">
 </head>
 
 <body>
