--- a/OnCom/Forth.html
+++ b/OnCom/Forth.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoe Finder Results | On</title>
     <link rel="stylesheet" href="forth.css">
+    <link rel="icon" type="image" href="https://th.bing.com/th/id/ODF.KuXLMoWlV2TBjHEZZn4F6Q?w=32&h=32&qlt=91&pcl=fffffa&o=6&cb=ucfimg1&pid=1.2&ucfimg=1">
 </head>
 
 <body>
