--- a/Cetaphil/gentle-cleanser-cart.html
+++ b/Cetaphil/gentle-cleanser-cart.html
@@ -458,7 +458,7 @@
             <div class="footer-content">
 
                 <div class="footer-brand-logo">
-                    <img src="https://placehold.co/200x100/ffffff/004a99?text=%231+BRAND+LOGO"
+                    <img src="https://www.cetaphil.in/on/demandware.static/-/Sites-Galderma-IN-Library/default/dwc4eca03e/CetaphilClaim.png"
                         alt="#1 Recommended Brand">
                 </div>
 
